2004-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/io.cxx (readwritev): For EWOULDBLOCK and EAGAIN return
	the number of bytes written if any have been written.

2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/select.cxx: No need to make pselect() dependent on
	CYGPKG_POSIX - that would depend on the arguments. Assert instead,
	and more correctly make it contingent on CYGPKG_POSIX_SIGNALS.

	* src/fio.h: Separate out signal functionality into its own separate
	test.

2003-12-21  Sandeep Kumar <sandeep@codito.com>

	* src/dir.cxx (readdir_r): Handle NULL dirp argument and return
	EBADF

2003-12-03  Dan Jakubiec  <djakubiec@yahoo.com>

	* src/select.cxx (pselect): Fixed the pselect() call to correctly
	handle NULL timeout arguments.  The previous implementation would
	cause a random timeout value to be used.

2003-11-28  David Woodhouse  <dwmw2@redhat.com>

	* include/fileio.h, include/sockio.h, src/dir.cxx, src/fd.cxx,
	src/io.cxx: Don't include kernel headers if no kernel support.

2003-10-23  Savin Zlobec  <savin@elatec.si>

	* src/io.cxx: Added cyg_fs_fsetinfo and cyg_fs_fgetinfo functions.
	
	* src/file.cxx: Added cyg_fs_setinfo and cyg_fs_getinfo functions.
	
	* include/fileio.h: Added cyg_fs_fsetinfo, cyg_fs_fgetinfo,
	cyg_fs_setinfo and cyg_fs_getinfo function prototypes.

2003-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/socket.cxx (bind): Pass a copy of the socket address so the
	stack can modify it without changing the users copy. Bug found by
	reji@codito.com.

2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fio.h (CYG_FILEIO_SIGMASK_SET): Fixed a compiler warning
	about an unused variable.

2003-09-22 Eric Doenges <Eric.Doenges@DynaPel.com>
	* src/devfs.cxx: prototype of dev_fo_select now matches
	implementation
	* include/fileio.h: changed definition of cyg_fileop_select to
	return a cyg_bool instead of int to match current implementations
	* src/misc.cxx: changed cyg_fileio_seltrue() to match prototype.
