@@ -1,3 +1,11 @@
+2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/fio.h: If no POSIX then CYG_FILEIO_DELIVER_SIGNALS
+	and CYG_FILEIO_SIGMASK_SET call CYG_UNUSED_PARAM on their
+	arguments to silence warnings.
+	* src/file.cxx (rename): Use a throw specifier to match
+	prototype.
+
 2004-02-16  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/io.cxx (readwritev): For EWOULDBLOCK and EAGAIN return
